crates/ps-core/tests/snapshots/event_schema__catch_complete.snap
---
source: crates/ps-core/tests/event_schema.rs
expression: to_canonical_json(&ev)
---
{
  "catch_id": "01HX2K7Y9P8R5M4N3A2B1C0D9E",
  "engagement_id": "01HX2K009P8R5M4N3A2B1C0D9E",
  "event_id": "01HX2K7Z9P8R5M4N3A2B1C0D9E",
  "payload": {
    "artifacts_path": "artifacts/01HX2K00.../catches/01HX2K7Y...",
    "final_protocol": "http/1.1",
    "probes_run": 3,
    "total_duration_ms": 1800
  },
  "schema": "portsnatcher/v1",
  "timestamp": "2026-04-22T20:30:15Z",
  "type": "CatchComplete"
}
