crates/ps-core/tests/snapshots/event_schema__engagement_started.snap
---
source: crates/ps-core/tests/event_schema.rs
expression: to_canonical_json(&ev)
---
{
  "catch_id": "01HX2K7Y9P8R5M4N3A2B1C0D9E",
  "engagement_id": "01HX2K009P8R5M4N3A2B1C0D9E",
  "event_id": "01HX2K7Z9P8R5M4N3A2B1C0D9E",
  "payload": {
    "dry_run": false,
    "engine": "raw",
    "ports": "ephemeral-iana",
    "profile": "internal",
    "rate_cap_pps": 50000,
    "targets": [
      "10.0.0.0/24"
    ]
  },
  "schema": "portsnatcher/v1",
  "timestamp": "2026-04-22T20:30:15Z",
  "type": "EngagementStarted"
}
