crates/ps-core/tests/snapshots/event_schema__fingerprint_captured.snap
---
source: crates/ps-core/tests/event_schema.rs
expression: to_canonical_json(&ev)
---
{
  "catch_id": "01HX2K7Y9P8R5M4N3A2B1C0D9E",
  "engagement_id": "01HX2K009P8R5M4N3A2B1C0D9E",
  "event_id": "01HX2K7Z9P8R5M4N3A2B1C0D9E",
  "payload": {
    "artifacts_path": "artifacts/01HX2K00.../catches/01HX2K7Y...",
    "banner_excerpt": "HTTP/1.1 200 OK",
    "confidence": 0.949999988079071,
    "protocol_guess": "https",
    "tls_info": {
      "alpn": "h2",
      "cert_issuer": "CN=Example CA",
      "cert_subject": "CN=example.com",
      "not_after": "2027-01-01T00:00:00Z",
      "server_name": "example.com"
    }
  },
  "schema": "portsnatcher/v1",
  "timestamp": "2026-04-22T20:30:15Z",
  "type": "FingerprintCaptured"
}
