crates/ps-core/tests/snapshots/event_schema__port_open_detected.snap
---
source: crates/ps-core/tests/event_schema.rs
expression: to_canonical_json(&ev)
---
{
  "catch_id": "01HX2K7Y9P8R5M4N3A2B1C0D9E",
  "engagement_id": "01HX2K009P8R5M4N3A2B1C0D9E",
  "event_id": "01HX2K7Z9P8R5M4N3A2B1C0D9E",
  "payload": {
    "detect_latency_ms": 180,
    "engine": "raw",
    "port": 54283,
    "syn_rtt_ms": 2,
    "target": "10.0.0.1"
  },
  "schema": "portsnatcher/v1",
  "timestamp": "2026-04-22T20:30:15Z",
  "type": "PortOpenDetected"
}
